# soturail

./: .env.example  .gitattributes  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  ROADMAP.md  SECURITY.md  llms.txt  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
benchmarks/: README.md
docs/: DIVIDEND_CALENDAR.md  FIXED_INCOME_TRACKER.md  INCOME_RISK_FIREWALL.md  MONTHLY_INCOME_DASHBOARD.md  README.md  REINVESTMENT_SIMULATOR.md  agent-docs-hygiene.md  agent-export-contract.md  agent-harness-synthesis-2026.md  agent-hosts.md  agent-qa-rail.md  agent-readable-reports.md  agents.md  architecture.md  baseline-snapshots.md  benchmarking.md  code-graph.md  comparisons.md  conductor-mode.md  context-intelligence.md  context-packs.md  dashboard-rail.md  deep-agents-patterns.md  deprecation-policy.md  diagram-rail.md  ecosystem-influences.md  eval-datasets.md  evaluation-suite.md  evidence-provenance-rail.md  external-projects-audit.md  filesystem-evidence-rail.md  future-rails-index.md  golden-agent-tests.md  governance-cost-rail.md  harness-lifecycle-rail.md  harness-rail.md  hooks.md  host-compatibility-rail.md  host-matrix-schema.md  (+51 more)
native/soturail-native/: Cargo.toml  README.md
native/soturail-native/src/: lib.rs  main.rs
native/soturail-native/tests/: basic.rs
(+304 files in other folders)
